# tabum

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  development.md  evaluation.md  generator.md  ideas.md  inference.md  training.md
notebooks/: release_v1_1.ipynb
results/: eval_history.md  final_table.csv  v1_1_results.md
scripts/: build_benchmark_suite.py  eval_baselines.py  eval_benchmark.py  eval_real.py  export_safetensors.py  pretrain.py  train_status.py  validate_explain.py
src/tabum/generator/: __init__.py  config.py  gp.py  postprocess.py  sampler.py  scm.py  tree.py
src/tabum/inference/: __init__.py  encoding.py  estimator.py
src/tabum/model/: __init__.py  config.py  heads.py  layers.py  model.py  preprocessing.py  stage1.py  stage2.py  stage3.py
src/tabum/train/: __init__.py  loop.py
tests/: test_generator.py  test_invariance.py  test_shapes.py
